--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,4 +10,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: demo workflow job
-        run: echo This is a demo start workflow 
+        run: | 
+        echo This is a updated demo start workflow 
+        pr_body="${{ github.event.pull_request.body }}"
+        echo "$pr_body"
