--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,6 @@
 name: Starter Workflow Demo
+env:
+  BODY: ${{ github.event.pull_request.body }}
 
 on: [push]
 
@@ -10,7 +12,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: demo workflow job
-        run: | 
-        echo This is a updated demo start workflow 
-        pr_body="${{ github.event.pull_request.body }}"
-        echo "$pr_body"
+        run: |
+          echo "This is the updated demo start workflow"
+          echo "$pr_body"
+          echo "This is the end for the demo start workflow"
