--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,7 +2,7 @@ name: Starter Workflow Demo
 env:
   BODY: ${{ github.event.pull_request.body }}
 
-on: [push]
+on: [pull_request]
 
 jobs:
   build:
